# POO_Lab_144_2022_2023_Semigrupa_1

./: CMakeLists.txt  main.cpp
bunicuta/: BucatariaBunicutei.cpp  BucatariaBunicutei.h  BunicutaTest.cpp  BunicutaTest.h  Forma.cpp  Forma.h  FormaCerc.h  FormaDreptunghi.cpp  FormaDreptunghi.h  FormaPatrat.cpp  FormaPatrat.h  FormaTriunghi.h  MeniuBucatariaBunicutei.cpp  MeniuBucatariaBunicutei.h
complex/: Complex.h  ComplexTest.cpp  ComplexTest.h
