cmake_minimum_required(VERSION 3.24)
project(POO_Lab_144_2022_2023_Semigrupa_1)

set(CMAKE_CXX_STANDARD 98)

add_executable(POO_Lab_144_2022_2023_Semigrupa_1 main.cpp complex/Complex.cpp complex/Complex.h complex/ComplexTest.cpp complex/ComplexTest.h bunicuta/BunicutaTest.cpp bunicuta/BunicutaTest.h bunicuta/Forma.cpp bunicuta/Forma.h bunicuta/FormaPatrat.cpp bunicuta/FormaPatrat.h bunicuta/FormaDreptunghi.cpp bunicuta/FormaDreptunghi.h bunicuta/BucatariaBunicutei.cpp bunicuta/BucatariaBunicutei.h bunicuta/MeniuBucatariaBunicutei.cpp bunicuta/MeniuBucatariaBunicutei.h bunicuta/FormaCerc.cpp bunicuta/FormaCerc.h bunicuta/FormaTriunghi.cpp bunicuta/FormaTriunghi.h)
